--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "serve out",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "test": "jest",
     "format": "prettier --write \"app/**/*.{ts,tsx}\""
   },
   "dependencies": {
@@ -18,18 +19,30 @@
     "serve": "^14.2.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/babel__preset-env": "^7",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.4.0",
     "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.3.0",
     "tailwindcss": "^3.4.3",
+    "ts-jest": "^29.1.5",
     "typescript": "^5"
   },
   "packageManager": "yarn@4.3.0"
