update: renoate config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,47 +1,28 @@
 {
   "extends": [
-    "config:best-practices",
-    ":prHourlyLimitNone",
-    ":automergePatch",
-    ":automergeMinor",
-    ":preserveSemverRanges"
+    "github>oota-sushikuitee/renovate-config"
   ],
-  "schedule": ["after 3am on monday", "before 6am on monday"],
   "packageRules": [
     {
       "allowedVersions": "/^[0-9]+[24680]\\.[0-9]+\\.0$/",
       "groupName": "Node.js dependencies",
-      "matchPackageNames": ["/node/", "/^@types/node$/"]
+      "matchPackageNames": [
+        "/node/",
+        "/^@types/node$/"
+      ]
     },
     {
       "groupName": "@types dependencies",
-      "matchPackageNames": ["/^@types//"]
+      "matchPackageNames": [
+        "/^@types//"
+      ]
     },
     {
       "groupName": "linting dependencies",
-      "matchPackageNames": ["/^eslint/", "/^prettier/"]
-    },
-    {
-      "matchUpdateTypes": ["pin"],
-      "addLabels": ["renovate: pin"]
-    },
-    {
-      "matchUpdateTypes": ["major"],
-      "addLabels": ["renovate: major"]
-    },
-    {
-      "matchUpdateTypes": ["minor"],
-      "minimumReleaseAge": "5 days",
-      "addLabels": ["renovate: minor"]
-    },
-    {
-      "matchUpdateTypes": ["patch"],
-      "minimumReleaseAge": "3 days",
-      "addLabels": ["renovate: patch"]
-    },
-    {
-      "matchDepTypes": ["action"],
-      "pinDigests": false
+      "matchPackageNames": [
+        "/^eslint/",
+        "/^prettier/"
+      ]
     }
   ]
 }
